--- a/Req.html
+++ b/Req.html
@@ -27,11 +27,24 @@
                     <a href="admin.html" class="navbar__links"> Admin</a>
                 </li>
                 <li class="navbar__btn">
-                    <a href="request.html" class="button"> Request
+                    <a href="Req.html" class="button"> Request
                     </a>
                 </li>
             </ul>
         </div>
     </nav>
+    <form>
+        <label for="fname">First name:</label><br>
+        <input type="text" id="fname" name="fname"><br>
+        <label for="lname">Last name:</label><br>
+        <input type="text" id="lname" name="lname"><br>
+        <label for="saddy">Street Address:</label><br>
+        <input type="text" id="saddy" name="saddy"><br>
+        <label for="city">City:</label><br>
+        <input type="text" id="city" name="city" ><br>
+        <label for="state">State:</label><br>
+        <input type="text" id="state" name="state"><br>
+        
+      </form>
 </body>
 </html>
