--- a/zipcode.html
+++ b/zipcode.html
@@ -27,7 +27,7 @@
                     <a href="admin.html" class="navbar__links"> Admin</a>
                 </li>
                 <li class="navbar__btn">
-                    <a href="request.html" class="button"> Request
+                    <a href="Req.html" class="button"> Request
                     </a>
                 </li>
             </ul>
