--- a/Interface.html
+++ b/Interface.html
@@ -27,7 +27,7 @@
                     <a href="admin.html" class="navbar__links"> Admin</a>
                 </li>
                 <li class="navbar__btn">
-                    <a href="Req.html" class="navbar__links"> Request
+                    <a href="Req.html" class="button"> Request
                     </a>
                 </li>
             </ul>
@@ -39,7 +39,7 @@
           <div class="main__content">
             <h1>GETTING RESOURCES TO THOSE</h1>
             <h2>IN NEED</h2>
-            <p>Request what you need in this time of crisis.</p>
+            <p>Request what you need in these times of crisis.</p>
             <button class="main__btn"><a href="#">Request</a></button>
           </div>
         </div>
