--- a/admin/admin_home.html
+++ b/admin/admin_home.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EMERGENCY REQUEST SYSTEM</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
     <nav class="navbar">
         <div class="navbar__container">
-            <a href="Interface.html" id="navbar__logo">EM DROP</a>
+            <a href="/Interface.html" id="navbar__logo">EM DROP</a>
             <div class="navbar__toggle" id="mobile-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -18,20 +18,29 @@
             </div>
             <ul class="navbar__menu">
                 <li class="navbar__item">
-                    <a href="Interface.html" class="navbar__links"> Home</a>
+                    <a href="/Interface.html" class="navbar__links"> Home</a>
                 </li>
                 <li class="navbar__item">
-                    <a href="zipcode.html" class="navbar__links"> Zipcode</a>
+                    <a href="/zipcode.html" class="navbar__links"> Zipcode</a>
                 </li>
                 <li class="navbar__item">
-                    <a href="admin.html" class="navbar__links"> Admin</a>
+                    <a href="/admin/admin_sign_in.html" class="navbar__links"> Admin</a>
                 </li>
                 <li class="navbar__btn">
-                    <a href="Req.html" class="button"> Request
+                    <a href="/Req.html" class="button"> Request
                     </a>
                 </li>
             </ul>
         </div>
     </nav>
+    
+    <a href="schedule_dropoff.html">
+        <button>
+            schedule dropoff
+        </button>
+    </a>
+    
+    <!-- Write your comments here -->
+
 </body>
 </html>
