--- a/Interface.html
+++ b/Interface.html
@@ -24,7 +24,7 @@
                     <a href="zipcode.html" class="navbar__links"> Zipcode</a>
                 </li>
                 <li class="navbar__item">
-                    <a href="admin.html" class="navbar__links"> Admin</a>
+                    <a href="/admin/admin_sign_in.html" class="navbar__links"> Admin</a>
                 </li>
                 <li class="navbar__btn">
                     <a href="Req.html" class="button"> Request
