--- a/Req.html
+++ b/Req.html
@@ -79,7 +79,7 @@
                 <input type="submit" value="Submit">
             </div>
         </form>
-                
+    <script src="app.js"></script>
     </div>
 </body>
 </html>
