cock a doodle doo

--- a/zipcode.html
+++ b/zipcode.html
@@ -33,5 +33,14 @@
             </ul>
         </div>
     </nav>
+    <a url="http//google.com">
+        <label>
+            Enter your zipcode
+            <input id="zipcode" name="zipcode" placeholder="enter zipcode here">
+        </label>
+    </a>
+    <button>
+
+    </button>
 </body>
 </html>
