--- a/zipcode.html
+++ b/zipcode.html
@@ -33,14 +33,20 @@
             </ul>
         </div>
     </nav>
-    <a url="http//google.com">
-        <label>
-            Enter your zipcode
-            <input id="zipcode" name="zipcode" placeholder="enter zipcode here">
-        </label>
-    </a>
+    <div>
+    <label>
+      Enter your zipcode
+      <input id="zipcode" name="zipcode" placeholder="enter zipcode here">
+    </label>   
+
     <button>
 
     </button>
+
+    <p id = "para">
+      
+    </p>
+    <script src="zipc.js"></script>
+    </div>
 </body>
 </html>
