--- a/Req.html
+++ b/Req.html
@@ -75,8 +75,10 @@
                 <label for="battery">How many batteries do you need (Up to 6):</label><br>
                 <input type="number" id="battery" name="battery" ><br>
             </div>
-            <div>
+            <div onclick = "sending()">
+                
                 <input type="submit" value="Submit">
+                
             </div>
         </form>
     <script src="app.js"></script>
