--- a/admin/admin_sign_in.html
+++ b/admin/admin_sign_in.html
@@ -21,7 +21,7 @@
                     <a href="/Interface.html" class="navbar__links"> Home</a>
                 </li>
                 <li class="navbar__item">
-                    <a href="zipcode.html" class="navbar__links"> Zipcode</a>
+                    <a href="/zipcode.html" class="navbar__links"> Zipcode</a>
                 </li>
                 <li class="navbar__item">
                     <a href="/admin/admin_sign_in.html" class="navbar__links"> Admin</a>
