--- a/Interface.html
+++ b/Interface.html
@@ -10,7 +10,7 @@
 <body>
     <nav class="navbar">
         <div class="navbar__container">
-            <a href="Interface.html" id="navbar__logo">EM DROP</a>
+            <a href="Interface.html" id="navbar__logo">CARGO DROP</a>
             <div class="navbar__toggle" id="mobile-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -39,7 +39,7 @@
           <div class="main__content">
             <h1>GETTING RESOURCES TO THOSE</h1>
             <h2>IN NEED</h2>
-            <p>Request what you need in these times of crisis.</p>
+            <p>Getting what you need in your time of need.</p>
             <button class="main__btn"><a href="#">Request</a></button>
           </div>
         </div>
