--- a/admin/dropoff_submission.html
+++ b/admin/dropoff_submission.html
@@ -10,7 +10,7 @@
 <body>
     <nav class="navbar">
         <div class="navbar__container">
-            <a href="/Interface.html" id="navbar__logo">EM DROP</a>
+            <a href="/Interface.html" id="navbar__logo">CARGO DROP</a>
             <div class="navbar__toggle" id="mobile-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
